# sisyphus

./: README.md  pyproject.toml
src/sisyphus/: utils.py
src/sisyphus/criterions/: __init__.py  ppo.py  ppo_fabric.py
src/sisyphus/models/: __init__.py  actor_critic.py  agent.py  fsmn.py
src/sisyphus/tasks/: __init__.py  fsmn.py  fsmn_agent.py
src/sisyphus/trainer/: train.py
tests/: evaluate_cartpole.py  test_fsmn_model.py  test_implementation.py  test_train.py  train_cartpole.py
