[project]
name = "sisyphus"
version = "0.1.0"
description = ""
authors = [
    {name = "migo",email = "1695587905@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
"numpy==1.26.4",
"typer>=0.15.1",
"tqdm>=4.67.0",
"wandb (>=0.19.8,<0.20.0)",
"lightning (==2.3.3)",
"torchrl (>=0.9.2,<0.10.0)",
"phx-class-registry (==5.0.0)",
"omegaconf (>=2.3.0,<3.0.0)",
"gymnasium (>=1.2.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "sisyphus", from = "src"}]

[project.optional-dependencies]
cpu = [ "torch (==2.3.1+cpu)", "torchvision (==0.18.1+cpu)" ]
cuda = [ "torch (==2.3.1+cu121)", "torchvision (==0.18.1+cu121)" ]


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"


[[tool.poetry.source]]
name = "migo-dl"
url = "https://pypi.migow.club/migo/dl/+simple/"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.dependencies.torch]]
markers = "extra == 'cpu' and extra != 'cuda'"
source = "pytorch-cpu"


[[tool.poetry.dependencies.torch]]
markers = "extra == 'cuda' and extra != 'cpu'"
source = "pytorch-cu121"


[[tool.poetry.dependencies.torchvision]]
markers = "extra == 'cpu' and extra != 'cuda'"
source = "pytorch-cpu"


[[tool.poetry.dependencies.torchvision]]
markers = "extra == 'cuda' and extra != 'cpu'"
source = "pytorch-cu121"
